qa/apps/ferload/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clin-ferload
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/ferload:4f3053117f63d19b37435e0eb98fb154c6e9036b-1645802184 # {"$imagepolicy": "flux-clin-qa:ferload"}
          name: clin-ferload
