qa/apps/ferload/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-ferload
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - ferload.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: ferload.qa.clin.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: clin-ferload
              servicePort: 9000
